--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -5,3 +5,29 @@
 * {
     @include reset();
 }
+
+main {
+    @include container(small);
+    .mobile-nav {
+        width: 236px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: -236px;
+    }
+    header {
+        @include flex-x(between);
+        .logo {
+            width: 67px;
+            img {
+                width: 100%;
+            }
+        }
+        .desktop-nav {
+            display: none;
+            @include media-query(1024px) {
+                display: block;
+            }
+        }
+    }
+}
