--- a/src/sass/pages/_global.scss
+++ b/src/sass/pages/_global.scss
@@ -1,9 +1,13 @@
 @import "../utils/variables";
 @import "../utils/mixins";
 @import "../layout/flex";
+@import "../components/social";
 
 * {
     @include reset();
+}
+.title {
+    font-weight: 500;
 }
 
 main {
@@ -13,6 +17,45 @@ main {
         top: 0;
         bottom: 0;
         right: -236px;
+        transition: 0.5s all;
+        border-left: 1px solid $light;
+        ul:first-child {
+            margin-top: 73px;
+            li {
+                a {
+                    color: $black;
+                    padding: 14px 30px;
+                    margin: 3px 0;
+                    display: block;
+                    font-family: $title;
+                    font-size: 15px;
+                    transition: 0.3s all;
+                    letter-spacing: 2px;
+                }
+                a:hover {
+                    text-decoration: none !important;
+                    color: $primary;
+                }
+            }
+            li:nth-child(1) {
+                a {
+                    color: $primary;
+                }
+            }
+        }
+        ul:nth-child(2) {
+            padding-left: 30px;
+            li {
+                @include social(28px, $secondary);
+                i {
+                    font-size: .875rem;
+                    color: $white;
+                }
+            }
+            li:hover {
+                background: $black;
+            }
+        }
     }
     header {
         .header-wrap {
@@ -21,6 +64,7 @@ main {
         }
         .logo {
             width: 67px;
+            padding: 10px 0;
             img {
                 width: 100%;
             }
