starting about section

--- a/src/sass/pages/_global.scss
+++ b/src/sass/pages/_global.scss
@@ -24,6 +24,42 @@
     font-weight: 600 !important;
     letter-spacing: 1px !important;
 }
+.section-wrap {
+    @include flex-x(center);
+    flex-direction: column;
+    padding-top: 30px;
+    @include container(small);
+    @include media-query-mobile(768px) {
+        @include container(medium);
+    }
+    @include media-query-mobile(1024px) {
+        flex-direction: row;
+        @include container(large);
+    }
+}
+.paint-stroke {
+    @include center(x, absolute);
+    top: -30px;
+}
+.description {
+    @include flex-x(start);
+    flex-direction: column;
+    h2 {
+        font-size: 1.625rem;
+    }
+    h1 {
+        font-size: 2.9375rem;
+        line-height: 1.3;
+        font-family: $title;
+        color: $dark;
+    }
+    p {
+        font-size: 17px;
+        font-family: $text;
+        line-height: 1.85;
+        color: #797979;
+    }
+}
 
 // header nav
 .mobile-nav {
