--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -159,3 +159,20 @@
         }
     }
 }
+main {
+    background-color: $white;
+    position: relative;
+    z-index: 2;
+    .about {
+        overflow: hidden;
+        .section-wrap {
+            position: relative;
+            z-index: 3;
+            .burger {
+                img {
+                    width: 100%;
+                }
+            }
+        }
+    }
+}
