--- a/src/sass/pages/_global.scss
+++ b/src/sass/pages/_global.scss
@@ -34,6 +34,8 @@
     }
     @include media-query-mobile(1024px) {
         flex-direction: row;
+    }
+    @include media-query-mobile(1200px) {
         @include container(large);
     }
 }
@@ -52,6 +54,7 @@
         line-height: 1.3;
         font-family: $title;
         color: $dark;
+        padding-bottom: 30px;
     }
     p {
         font-size: 17px;
@@ -59,6 +62,9 @@
         line-height: 1.85;
         color: #797979;
     }
+}
+.section {
+    padding: 3rem 0 1rem 0;
 }
 
 // header nav
