--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -165,6 +165,9 @@ main {
     z-index: 2;
     .about {
         overflow: hidden;
+        .side-info {
+            
+        }
         .section-wrap {
             position: relative;
             z-index: 3;
