--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -172,11 +172,15 @@ main {
                 margin: 0 auto;
                 position: relative;
                 .side-info {
+                    display: none;
                     width: 75px;
                     left: -70px;
                     @include center(y, absolute);
                     img {
                         width: 100%;
+                    }
+                    @include media-query-mobile(768px) {
+                        display: block;
                     }
                 }
                 img {
@@ -209,6 +213,21 @@ main {
                 button {
                     width: 170px;
                 }
+            }
+        }
+    }
+    .promotion {
+        .promo-item {
+            width: 100%;
+            height: 300px;
+            padding: 10px 0;
+            @include media-query-mobile(1024px) {
+
+            }
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         }
     }
