--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -217,12 +217,26 @@ main {
         }
     }
     .promotion {
+        overflow: hidden;
+        @include media-query-mobile(1024px) {
+            .promo-item + .promo-item {
+                padding-left: 20px;
+            }
+        }
         .promo-item {
             width: 100%;
             height: 300px;
             padding: 10px 0;
-            @include media-query-mobile(1024px) {
-
+            position: relative;
+            h1 {
+                position: absolute;
+                font-family: $title;
+                color: $white;
+                letter-spacing: 1px;
+                font-weight: lighter;
+                line-height: 1.7rem;
+                padding: 30px;
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
             }
             img {
                 width: 100%;
