--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -309,18 +309,90 @@ main {
     }
     .testimonials {
         position: relative;
+        margin: 0 auto;
         .paint-stroke {
             top: -10px;
         }
         .quote {
             height: 560px;
-            img {
-                height: 100%;
+            background: url("../../../dist/images/black.png");
+            @include media-query-mobile(1024px) {
+                width: 50%;
+            }
+            .quotation-mark {
+                position: relative;
+                top: 20%;
+                i {
+                    color: $secondary;
+                    @include center(x, relative);
+                    font-size: 45px;
+                }
+            }
+            .carousel {
+                @include center(y, relative);
+                .carousel-item {
+                    p {
+                        color: $white;
+                        text-align: center;
+                        font-family: $text;
+                        font-size: 18px;
+                        padding: 55px 10%;
+                        &:hover {
+                            cursor: grab;
+                        }
+                        @include media-query-mobile(600px) {
+                            font-size: 28px;
+                        }
+                    }
+                    h3 {
+                        color: $light;
+                        font-family: $title;
+                        font-size: 15px;
+                        letter-spacing: 1px;
+                        text-align: center;
+                        @include media-query-mobile(600px) {
+                            font-size: 20px;
+                        }
+                        span {
+                            margin-right: 10px;
+                        }
+                    }
+                }
+                .slick-dots {
+                    margin-top: 55px;
+                    @include flex-x(center);
+                    li {
+                        margin: 5px 8px;
+                        button {
+                            font-size: 0;
+                            width: 11px;
+                            height: 11px;
+                            border: none;
+                            border-radius: 50%;
+                            background: $semi;
+                        }
+                    }
+                    .slick-active {
+                        button {
+                            background: $secondary;
+                        }
+                    }
+                }
             }
         }
         .testimonial-img {
+            margin-top: 24px;
+            @include media-query-mobile(1024px) {
+                width: 50%;
+                margin-top: 0;
+            }
             img {
-                width: 370px;
+                width: 100%;
+                @include media-query-mobile(1024px) {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
             }
         }
     }
