--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -314,8 +314,9 @@ main {
             top: -10px;
         }
         .quote {
-            height: 560px;
             background: url("../../../dist/images/black.png");
+            background-repeat: no-repeat;
+            background-size: cover;
             @include media-query-mobile(1024px) {
                 width: 50%;
             }
