--- a/src/sass/pages/_global.scss
+++ b/src/sass/pages/_global.scss
@@ -276,6 +276,14 @@ footer {
         p, li {
             font-size: 0.9375rem;
         }
+        a, a:visited {
+            color: $light;
+            @include media-query-mobile(1024px) {
+                &:hover {
+                    color: $primary;
+                }
+            }
+        }
         .section-wrap {
             padding: 7.5rem 0;
             .footer-item {
@@ -283,6 +291,10 @@ footer {
                 @include media-query-mobile(1024px) {
                     width: 248px;
                     justify-content: space-between !important;
+                }
+                span {
+                    color: $secondary;
+                    padding-right: 10px;
                 }
                 h2 {
                     font-family: $title;
@@ -312,12 +324,15 @@ footer {
         }
         .contact-info {
             padding-bottom: 2.6rem;
+            position: relative;
             .section-wrap {
                 text-align: center;
                 color: $light;
                 align-items: center;
                 padding: 0;
                 justify-content: space-between !important;
+                z-index: 3;
+                position: relative;
                 p {
                     span {
                         color: $white;
